feat(navigation): add logo

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,34 +1,251 @@
 <header>
   <nav>
     <ul>
+      <li class="logo">
+        <a class="nav-item" href="/">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="90"
+            height="90"
+            viewBox="0 0 90 90"
+            fill="none"
+          >
+            <g clip-path="url(#clip0_2864_402)">
+              <rect
+                class="background"
+                fill="currentColor"
+                width="90"
+                height="90"
+                transform="matrix(-1 0 0 1 90 0)"
+              />
+              <path
+                d="M26.2667 57.0002L23.2902 61.7034C25.9082 63.423 31.7852 67.2897 34.3489 68.9989C36.9127 70.7081 41.3086 74.1135 43.1861 75.6025L45.1931 71.7504L48.6244 68.9989C49.1208 69.1823 50.7997 69.5039 53.5448 69.3226C56.9641 69.0968 57.6189 67.2959 58.136 65.8738L58.1414 65.8589C58.5558 64.7195 58.8013 62.6918 58.6287 61.7315C59.6753 59.2713 61.9878 54.415 62.7129 52.3173C63.438 50.2197 63.3451 46.9374 63.1185 45.9447L61.9935 41.678L63.3855 36.9195V35.4628C63.0834 33.8766 62.1619 29.7914 60.8929 26.14C59.3068 21.5758 55.3547 18.6181 50.5962 18.3268C45.8377 18.0355 44.1168 18.0375 39.682 22.0838C35.2472 26.1302 30.691 26.8179 29.2991 27.2064C28.1856 27.5171 26.936 30.3579 26.4505 31.7395L24.9618 39.4428C21.045 38.7954 20.7857 41.5484 22.5014 45.2711C23.8739 48.2492 26.0315 50.5546 26.9387 51.3351L26.2667 57.0002Z"
+                fill="white"
+              />
+              <path
+                opacity="0.1"
+                d="M47.4688 28.7168C43.3785 27.2056 39.243 24.9009 37.6865 23.9375C39.3757 23.9375 42.4663 20.3802 43.8004 18.6015C49.3581 17.1565 54.2489 18.49 57.6947 21.8246C60.4513 24.4923 61.9556 28.642 62.3631 30.3834C59.1026 30.4575 51.559 30.2279 47.4688 28.7168Z"
+                fill="black"
+              />
+              <path
+                opacity="0.2"
+                d="M41.0816 66.0114C42.7426 66.9933 46.745 68.6223 48.5386 69.3141L45.1405 72.3355L43.3472 75.9222L39.0998 72.3355V70.2392C39.0998 69.6523 38.8421 69.0951 38.3949 68.7151L34.4945 65.4009C34.212 65.1608 34.0017 64.8469 33.8873 64.4943L32.2002 59.2969C33.0497 60.7127 39.0052 64.784 41.0816 66.0114Z"
+                fill="black"
+              />
+              <path
+                d="M58.7386 84.2635C60.1605 86.7278 61.0693 92.0051 61.346 94.3358L-7.14625 96.5881L-7.85742 84.2635L3.28193 75.7323C1.97846 71.7031 1.74127 66.6082 1.85977 63.8828L2.22199 61.9866L4.00423 59.6805L5.65158 51.9151C8.02153 49.0712 10.8658 50.2558 13.8282 50.4928C16.1982 50.6824 23.1895 52.5469 26.389 53.4554L25.7965 57.3656L23.5453 61.9866C27.1476 63.4085 37.9228 71.7429 42.8601 75.7323L45.1117 72.2959L48.1929 69.2146C51.1316 70.0675 54.5522 69.57 55.8952 69.2146C55.8004 72.2481 54.5914 76.0877 53.9988 77.6284C54.9863 78.8133 57.3167 81.7993 58.7386 84.2635Z"
+                fill="#353535"
+              />
+              <path
+                d="M30.7783 40.1465H29.5052C29.1699 40.1465 28.9287 40.4699 29.0187 40.7929C29.2461 41.6084 29.5515 42.7991 29.7144 43.7528C29.9829 45.3256 30.75 52.3453 30.75 53.3043C30.75 54.2633 31.4169 59.3568 33.1049 61.0446C34.7929 62.7324 38.9355 65.4176 42.2344 67.2972C45.5333 69.1768 49.781 70.2767 54.7677 69.2027C59.7544 68.1286 58.3951 63.2436 58.5485 61.901C58.6713 60.8269 59.6401 58.5723 60.2027 57.3703C59.8651 56.9407 59.8647 56.1301 59.7112 55.6058C60.1314 54.3173 58.9855 52.8455 58.1989 52.1124C58.0693 51.9916 57.8827 51.9601 57.7159 52.0198L55.952 52.6522L54.7071 51.9951C54.6185 51.9483 54.5179 51.9293 54.4183 51.9404L48.2495 52.6285C48.1097 52.6441 47.9748 52.689 47.8536 52.7603L44.868 54.5153C44.6385 54.6502 44.4723 54.871 44.4062 55.1287L44.0118 56.6643C43.9038 57.085 43.5363 57.3925 43.1021 57.379C42.2171 57.3514 41.1263 57.1809 40.9152 56.6415C40.57 55.7593 40.4933 54.8003 39.6494 53.9564C38.8055 53.1125 38.1917 53.1892 36.5806 52.3453C34.9696 51.5014 32.9664 49.3001 32.1992 46.9218C31.6471 45.2104 31.3294 42.3168 31.2897 40.6542C31.283 40.3749 31.0578 40.1465 30.7783 40.1465Z"
+                fill="#8B8B8B"
+              />
+              <path
+                d="M52.2639 54.5566L47.3759 55.4427C47.0157 55.508 46.7199 55.7649 46.6049 56.1125L46.4299 56.6413C46.3365 56.9237 46.5076 57.229 46.7936 57.3107C47.0919 57.3959 47.5071 57.5241 48.0217 57.7071C49.4189 58.2039 54.6807 59.5093 56.8231 58.9194C58.537 58.4475 57.349 57.3716 57.4728 56.7001L58.2237 55.6174C58.4419 55.3028 58.24 54.8697 57.8587 54.8346L54.8413 54.5566H52.2639Z"
+                fill="white"
+              />
+              <path
+                d="M52.1768 55.3755C51.5443 55.3994 49.3008 55.6328 47.7908 55.8495C47.4995 55.8913 47.4559 56.2648 47.7286 56.3754C49.6252 57.1446 52.7772 58.2921 54.0387 58.4405C55.129 58.5688 56.2597 58.3919 57.0212 58.202C57.428 58.1006 57.6892 57.7238 57.6892 57.3045V56.4328L57.9932 55.963C58.2084 55.6303 57.9696 55.1914 57.5733 55.1914H56.4481L55.645 55.7755L54.6958 55.3755C54.1848 55.3631 52.9655 55.3456 52.1768 55.3755Z"
+                fill="#FED1D0"
+              />
+              <path
+                opacity="0.5"
+                d="M47.4431 46.1189C46.9007 45.1507 45.2683 44.9699 43.797 45.7151C42.3257 46.4602 41.5727 47.8492 42.1152 48.8174C42.6576 49.7856 44.0774 50.6422 45.5487 49.8971C47.0199 49.1519 47.9855 47.0871 47.4431 46.1189Z"
+                fill="#FED1D0"
+              />
+              <path
+                d="M27.2035 40.4403C24.6861 39.2098 22.7549 38.6664 21.5513 40.4409C20.0468 42.6591 24.957 50.1041 26.6202 51.0545C27.9507 51.8147 29.6562 52.1104 30.3426 52.1632"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M23.867 30.2473C22.9979 33.1899 23.2536 37.5476 23.4901 39.3587H24.5774C25.2183 36.3215 26.9263 29.7375 28.6316 27.6984C30.5232 27.3455 35.2315 25.8687 38.9324 22.7846C41.0118 20.9739 45.2618 16.7987 45.6263 14.5837L47.1473 13.5295L44.1798 12.0234L29.8437 16.6217C28.2136 19.9375 24.7361 27.3048 23.867 30.2473Z"
+                fill="#F3F3F3"
+              />
+              <path
+                d="M26.7247 51.1403C26.6605 51.7037 26.5703 52.4958 26.4764 53.3208M23.4884 61.689C24.3075 60.4703 25.9697 57.817 26.0653 56.9537C26.1268 56.3986 26.3075 54.8064 26.4764 53.3208M23.4884 61.689C18.5291 59.6304 8.15612 54.9211 6.33833 52.5525C5.891 51.9696 5.80659 51.5041 5.99737 51.1403M23.4884 61.689C28.8805 65.1846 40.2157 72.7405 42.4191 74.9989C44.6224 77.2574 44.8979 79.75 44.7602 80.714C45.6782 78.786 47.2021 74.5249 44.9987 72.3766M26.4764 53.3208C24.6754 52.7893 20.0818 51.5196 16.1157 50.6934C12.1341 49.8639 6.77569 49.6561 5.99737 51.1403M5.99737 51.1403C5.99737 51.1403 4.68546 53.5614 4.00423 59.0864M3.29973 75.7284C2.45046 73.2726 0.56512 68.7772 2.16258 62.0568C2.35102 61.2641 3.82564 59.7485 4.00423 59.0864M4.68546 70.9364C5.39697 70.3626 8.32105 69.697 14.3253 71.625C21.8306 74.035 25.0668 78.2352 30.9884 79.4746C35.7257 80.4661 40.2151 80.714 41.8677 80.714M37.2543 77.0646C39.0905 77.7761 42.9005 80.232 43.4514 84.3633C44.0022 88.4947 44.1399 89.9407 44.1399 90.1473M4.00423 59.0864C5.35818 60.3868 8.44499 61.9989 13.017 63.982M-1.99414 79.4746C-0.525214 78.2811 5.56681 73.9523 8.54139 73.8972C11.516 73.8422 15.9319 76.7662 17.768 78.2352"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M25.8438 39.6202L27.0846 38.6133L43.0877 39.8109"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M47.3431 13.2563C46.5838 12.997 44.6196 12.0633 43.7567 12.1111C42.6781 12.1709 32.0173 15.286 30.1592 16.5447M30.1592 16.5447C28.3012 17.8034 24.867 26.324 23.8481 29.6206C23.033 32.2578 23.1885 37.1527 23.3682 39.2705M30.1592 16.5447C30.0793 18.0031 30.2491 21.2174 30.6807 22.3682"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M26.5439 43.9473L28.4028 47.843"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M26.0654 46.4669L28.729 45.8379"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M42.9335 42.2469L43.2062 38.932C43.2456 38.4538 43.4555 38.0057 43.7977 37.6695L45.2254 36.2666C45.6549 35.8446 46.2518 35.6385 46.8502 35.7057L50.1803 36.0795C50.7681 36.1454 51.2965 36.4682 51.6236 36.961L52.3788 38.0988C52.8016 38.7358 52.9653 39.5101 52.8364 40.2637L52.43 42.6396C52.3184 43.292 51.9942 43.8891 51.5079 44.3381L50.6712 45.1105C50.0722 45.6635 49.2738 45.9489 48.4599 45.901L45.8235 45.7458C45.1619 45.7069 44.5625 45.3427 44.2231 44.7734L43.0712 42.8409C42.9645 42.6621 42.9164 42.4544 42.9335 42.2469Z"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M55.1343 8.53017C51.1784 10.1485 36.8535 20.5176 31.3396 24.8334C30.3042 25.6439 29.4047 26.6904 28.6291 27.8619M55.1343 8.53017C59.0901 6.91186 65.2637 8.11049 69.0997 11.1073C72.9356 14.1042 76.1123 21.0571 71.7968 25.1927C68.3444 28.5013 63.8815 30.3032 62.2232 30.7228M55.1343 8.53017C49.7004 10.8189 45.0502 16.4194 43.2485 18.8089M62.2232 30.7228C61.2335 26.4333 58.9202 21.3448 54.3171 19.2351C50.6346 17.5473 45.4898 18.1887 43.2485 18.8089M62.2232 30.7228C62.4892 31.769 63.1937 34.1219 63.4699 35.2266C63.6814 36.0726 63.1797 37.8954 62.7329 39.3128M24.661 39.3595C24.7722 38.4489 24.896 37.3345 25.2387 35.9797M28.6291 27.8619C26.9762 30.3583 25.8856 33.4224 25.2387 35.9797M28.6291 27.8619C36.4878 25.5732 41.6498 20.8729 43.2485 18.8089M62.8502 41.217L66.2646 41.4926M62.7329 44.1333C62.963 44.9389 63.4706 47.233 63.5089 49.1893C63.5473 51.1457 61.5061 55.6617 60.6238 57.6947C60.1614 58.7251 59.1895 60.9891 59.0004 61.802C58.7641 62.8181 58.9504 65.5119 57.6744 67.3551C56.3983 69.1982 54.248 69.4818 51.6251 69.4109C49.0021 69.34 43.6145 67.9931 40.5426 65.6301M59.5787 46.4249L58.064 43.2077L57.5964 42.1115M59.5787 46.4249L62.2532 46.5904C63.2199 46.6502 64.156 46.2396 64.7668 45.4879L65.2257 44.9231C65.533 44.5449 65.7436 44.0975 65.8392 43.6196L66.2646 41.4926M59.5787 46.4249C59.9605 47.1161 60.4906 48.4693 59.7305 49.6386C59.0318 50.7134 55.6962 50.9735 54.1762 50.954M66.2646 41.4926L66.3034 41.2986C66.4384 40.6234 66.337 39.9222 66.0163 39.3128L65.5808 38.4856C65.252 37.8611 64.6185 37.4561 63.9137 37.4198L61.3863 37.2899C60.8164 37.2606 60.2611 37.4761 59.8602 37.8822L58.6017 39.1572C58.3456 39.4166 58.1653 39.741 58.0803 40.0955L57.5964 42.1115M57.5964 42.1115L57.1288 41.0153M25.2387 35.9797L25.7895 39.6521"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M53.0361 39.6806C53.7277 39.5155 55.3623 39.1911 56.368 39.214C57.3737 39.237 57.8204 39.7844 58.0445 40.0867"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M48.16 69.3125L45.1918 71.9005L43.1133 75.8014"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M56.1892 69.0781C56.0515 71.3959 55.2804 76.4033 53.2972 77.8909C51.3141 79.3786 48.3854 80.7145 47.1689 81.1965"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M54.1934 77.1328C55.0654 78.12 57.1538 80.7414 58.5309 83.3301C60.2523 86.5659 61.6983 94.0712 61.6983 94.4843"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M41.9062 38.6133H43.1705V41.2194L41.7348 40.9373C41.4899 40.8891 41.318 40.6678 41.332 40.4186L41.4069 39.0852C41.4218 38.8204 41.6409 38.6133 41.9062 38.6133Z"
+                fill="black"
+              />
+              <path
+                d="M67.4086 40.5379L66.1718 40.2756L65.6311 42.825L67.094 42.8469C67.3436 42.8506 67.5577 42.6698 67.5957 42.4231L67.7991 41.1032C67.8395 40.841 67.6681 40.593 67.4086 40.5379Z"
+                fill="black"
+              />
+              <path
+                d="M50.119 32.2806L51.356 33.9934C51.6157 34.3529 51.3138 34.85 50.8746 34.788C49.1628 34.5466 46.7606 34.2451 45.5683 34.2248C44.0599 34.1993 42.5797 34.9492 41.8234 35.3114L40.3013 35.5158C40.0518 35.5493 39.8726 35.2784 40.0067 35.0654C40.5799 34.1554 41.5344 32.8657 42.9794 32.4678C44.6601 32.005 48.0409 32.0089 49.7383 32.075C49.8905 32.0809 50.0298 32.1572 50.119 32.2806Z"
+                fill="black"
+              />
+              <path
+                d="M61.0658 34.2672L59.2609 35.2604C58.837 35.4937 58.9571 36.1359 59.4365 36.2012C61.0666 36.4234 63.5173 36.7752 64.2194 36.9718L64.4317 35.868C64.5006 35.5093 64.3684 35.1372 64.0389 34.9796C63.1986 34.5777 61.8989 34.3002 61.3664 34.2129C61.2628 34.1959 61.1577 34.2167 61.0658 34.2672Z"
+                fill="black"
+              />
+              <ellipse
+                cx="47.9717"
+                cy="40.0869"
+                rx="1.28027"
+                ry="1.77832"
+                fill="black"
+              />
+              <ellipse
+                cx="60.2417"
+                cy="41.4287"
+                rx="1.104"
+                ry="1.77832"
+                fill="black"
+              />
+              <path
+                d="M45.9287 76.9355C46.5047 74.583 45.4884 72.8746 44.9082 72.3145L43.168 75.6147C44.7525 77.2473 44.9884 79.4561 44.9082 80.3564C45.0084 80.1963 45.3527 79.2881 45.9287 76.9355Z"
+                fill="black"
+              />
+              <path
+                d="M26.1222 57.3095L23.421 61.8114C20.5601 60.4504 14.2861 57.4523 12.0773 56.3479C9.31633 54.9675 5.53528 52.5075 6.07547 51.2471C6.61566 49.9866 10.1565 49.8659 14.358 50.2861C17.7192 50.6222 23.6013 52.3072 26.1222 53.1077V57.3095Z"
+                fill="black"
+              />
+              <path
+                d="M57.0417 20.5309C59.3484 22.5363 61.6806 28.2207 62.5583 30.8122L67.0718 28.681C69.2867 27.8452 73.6663 24.669 73.4657 18.651C73.215 11.1284 66.5703 9.37362 61.054 8.24528C55.5377 7.11694 54.6601 8.74596 49.6453 12.0056C45.6334 14.6133 44.1288 17.5224 43.8779 18.651C48.3913 17.8987 54.1583 18.0241 57.0417 20.5309Z"
+                fill="black"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_2864_402">
+                <rect
+                  width="90"
+                  height="90"
+                  fill="white"
+                  transform="matrix(-1 0 0 1 90 0)"
+                />
+              </clipPath>
+            </defs>
+          </svg>
+        </a>
+      </li>
+      <!--<li>
+                <a class="nav-item{% if active == 'home' %} active{% endif %}" href="/">
+                  <i class="twa twa-pirate-flag"></i>
+                  <span class="nav-item-label">Home</span>
+                </a>
+              </li>-->
       <li>
-        <a class="nav-item{% if active == 'home' %} active{% endif %}" href="/">
-          <i class="twa twa-pirate-flag"></i> <span class="nav-item-label">Home</span>
+        <a
+          class="nav-item{% if active == 'projects' %} active{% endif %}"
+          href="/projects"
+        >
+          <i class="twa twa-triangular-ruler"></i>
+          <span class="nav-item-label">Projects</span>
         </a>
       </li>
       <li>
-        <a class="nav-item{% if active == 'projects' %} active{% endif %}" href="/projects">
-          <i class="twa twa-triangular-ruler"></i> <span class="nav-item-label">Projects</span>
+        <a
+          class="nav-item{% if active == 'portraits' %} active{% endif %}"
+          href="/portraits"
+        >
+          <i class="twa twa-camera"></i>
+          <span class="nav-item-label">Portraits</span>
         </a>
       </li>
       <li>
-        <a class="nav-item{% if active == 'portraits' %} active{% endif %}" href="/portraits">
-          <i class="twa twa-camera"></i> <span class="nav-item-label">Portraits</span>
+        <a
+          class="nav-item{% if active == 'blog' %} active{% endif %}"
+          href="/blog"
+        >
+          <i class="twa twa-pencil"></i>
+          <span class="nav-item-label">Blog</span>
         </a>
       </li>
       <li>
-        <a class="nav-item{% if active == 'blog' %} active{% endif %}" href="/blog">
-          <i class="twa twa-pencil"></i> <span class="nav-item-label">Blog</span>
+        <a
+          class="nav-item{% if active == 'about' %} active{% endif %}"
+          href="/about"
+        >
+          <i class="twa twa-man-raising-hand-light-skin-tone"></i>
+          <span class="nav-item-label">About</span>
         </a>
       </li>
       <li>
-        <a class="nav-item{% if active == 'about' %} active{% endif %}" href="/about">
-          <i class="twa twa-man-raising-hand-light-skin-tone"></i> <span class="nav-item-label">About</span>
-        </a>
-      </li>
-      <li>
-        <a class="nav-item{% if active == 'now' %} active{% endif %}" href="/now">
-          <i class="twa twa-high-voltage"></i> <span class="nav-item-label">Now</span>
+        <a
+          class="nav-item{% if active == 'now' %} active{% endif %}"
+          href="/now"
+        >
+          <i class="twa twa-high-voltage"></i>
+          <span class="nav-item-label">Now</span>
         </a>
       </li>
       <li class="theme-toggle">
