--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -5,6 +5,7 @@
   --color-link: oklch(1 0 0);
   --color-link-subdued: oklch(0.88 0 0);
   --color-emphasis: oklch(0 0 0);
+  --color-logo-bg: oklch(0.45 0.03 100.8);
   --color-emphasis-reversed: oklch(0.98 0.08 83.33);
 }
 
@@ -15,6 +16,7 @@
   --color-link: oklch(0 0 0);
   --color-link-subdued: oklch(0.13 0 0);
   --color-emphasis: oklch(0.882722 0.049418 91.7743);
+  --color-logo-bg: oklch(0.882722 0.049418 91.7743);
   --color-emphasis-reversed: oklch(0 0 0);
 }
 
