--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,8 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="{{ site.meta.theme_color }}">
+<meta name="theme-color" media="(prefers-color-scheme: light)" content="{{ site.meta.theme_color_light }}" />
+<meta name="theme-color" media="(prefers-color-scheme: dark)" content="{{ site.meta.theme_color_dark }}" />
 <base href="{{ page.url }}">
 <meta name="description" content="{% if page.description %}{{ page.description }}{% elsif page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}">
 <meta name="robots" content="index,follow">
