--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -7,6 +7,7 @@ code {
 div.highlighter-rouge {
   width: 100%;
   max-width: var(--max-width);
+  margin: 0 auto;
 }
 
 .highlight {
@@ -19,112 +20,209 @@ div.highlighter-rouge {
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight, .highlight .w {
-  color: #c9d1d9;
-  background-color: #161b22;
-}
-.highlight .k, .highlight .kd, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kt, .highlight .kv {
-  color: #ff7b72;
-}
-.highlight .gr {
-  color: #f0f6fc;
-}
-.highlight .gd {
-  color: #ffdcd7;
-  background-color: #67060c;
-}
-.highlight .nb {
-  color: #ffa657;
-}
-.highlight .nc {
-  color: #ffa657;
-}
-.highlight .no {
-  color: #ffa657;
-}
-.highlight .nn {
-  color: #ffa657;
-}
-.highlight .sr {
-  color: #7ee787;
-}
-.highlight .na {
-  color: #7ee787;
-}
-.highlight .nt {
-  color: #7ee787;
-}
-.highlight .gi {
-  color: #aff5b4;
-  background-color: #033a16;
-}
-.highlight .kc {
-  color: #79c0ff;
-}
-.highlight .l, .highlight .ld, .highlight .m, .highlight .mb, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mx {
-  color: #79c0ff;
-}
-.highlight .sb {
-  color: #79c0ff;
-}
-.highlight .bp {
-  color: #79c0ff;
-}
-.highlight .ne {
-  color: #79c0ff;
-}
-.highlight .nl {
-  color: #79c0ff;
-}
-.highlight .py {
-  color: #79c0ff;
-}
-.highlight .nv, .highlight .vc, .highlight .vg, .highlight .vi, .highlight .vm {
-  color: #79c0ff;
-}
-.highlight .o, .highlight .ow {
-  color: #79c0ff;
-}
-.highlight .gh {
-  color: #1f6feb;
-  font-weight: bold;
-}
-.highlight .gu {
-  color: #1f6feb;
-  font-weight: bold;
-}
-.highlight .s, .highlight .sa, .highlight .sc, .highlight .dl, .highlight .sd, .highlight .s2, .highlight .se, .highlight .sh, .highlight .sx, .highlight .s1, .highlight .ss {
-  color: #a5d6ff;
-}
-.highlight .nd {
-  color: #d2a8ff;
-}
-.highlight .nf, .highlight .fm {
-  color: #d2a8ff;
+  color: #282828;
+  background-color: #fbf1c7;
 }
 .highlight .err {
-  color: #f0f6fc;
-  background-color: #8e1519;
+  color: #9d0006;
+  background-color: #fbf1c7;
+  font-weight: bold;
 }
-.highlight .c, .highlight .ch, .highlight .cd, .highlight .cm, .highlight .cp, .highlight .cpf, .highlight .c1, .highlight .cs {
-  color: #8b949e;
+.highlight .c, .highlight .ch, .highlight .cd, .highlight .cm, .highlight .cpf, .highlight .c1, .highlight .cs {
+  color: #928374;
 }
-.highlight .gl {
-  color: #8b949e;
+.highlight .cp {
+  color: #427b58;
 }
-.highlight .gt {
-  color: #8b949e;
+.highlight .nt {
+  color: #9d0006;
 }
-.highlight .ni {
-  color: #c9d1d9;
+.highlight .o, .highlight .ow {
+  color: #282828;
 }
-.highlight .si {
-  color: #c9d1d9;
+.highlight .p, .highlight .pi {
+  color: #282828;
 }
-.highlight .ge {
-  color: #c9d1d9;
+.highlight .gi {
+  color: #79740e;
+  background-color: #fbf1c7;
+}
+.highlight .gd {
+  color: #9d0006;
+  background-color: #fbf1c7;
+}
+.highlight .gh {
+  color: #79740e;
+  font-weight: bold;
+}
+.highlight .k, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kv {
+  color: #9d0006;
+}
+.highlight .kc {
+  color: #8f3f71;
+}
+.highlight .kt {
+  color: #b57614;
+}
+.highlight .kd {
+  color: #af3a03;
+}
+.highlight .s, .highlight .sb, .highlight .sc, .highlight .dl, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .s1 {
+  color: #79740e;
   font-style: italic;
 }
-.highlight .gs {
-  color: #c9d1d9;
-  font-weight: bold;
+.highlight .si {
+  color: #79740e;
+  font-style: italic;
+}
+.highlight .sr {
+  color: #79740e;
+  font-style: italic;
+}
+.highlight .sa {
+  color: #9d0006;
+}
+.highlight .se {
+  color: #af3a03;
+}
+.highlight .nn {
+  color: #427b58;
+}
+.highlight .nc {
+  color: #427b58;
+}
+.highlight .no {
+  color: #8f3f71;
+}
+.highlight .na {
+  color: #79740e;
+}
+.highlight .m, .highlight .mb, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mx {
+  color: #8f3f71;
+}
+.highlight .ss {
+  color: #076678;
+}
+
+@mixin dark-code-colors {
+  .highlight table td { padding: 5px; }
+  .highlight table pre { margin: 0; }
+  .highlight, .highlight .w {
+    color: #c9d1d9;
+    background-color: #161b22;
+  }
+  .highlight .k, .highlight .kd, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kt, .highlight .kv {
+    color: #ff7b72;
+  }
+  .highlight .gr {
+    color: #f0f6fc;
+  }
+  .highlight .gd {
+    color: #ffdcd7;
+    background-color: #67060c;
+  }
+  .highlight .nb {
+    color: #ffa657;
+  }
+  .highlight .nc {
+    color: #ffa657;
+  }
+  .highlight .no {
+    color: #ffa657;
+  }
+  .highlight .nn {
+    color: #ffa657;
+  }
+  .highlight .sr {
+    color: #7ee787;
+  }
+  .highlight .na {
+    color: #7ee787;
+  }
+  .highlight .nt {
+    color: #7ee787;
+  }
+  .highlight .gi {
+    color: #aff5b4;
+    background-color: #033a16;
+  }
+  .highlight .kc {
+    color: #79c0ff;
+  }
+  .highlight .l, .highlight .ld, .highlight .m, .highlight .mb, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mx {
+    color: #79c0ff;
+  }
+  .highlight .sb {
+    color: #79c0ff;
+  }
+  .highlight .bp {
+    color: #79c0ff;
+  }
+  .highlight .ne {
+    color: #79c0ff;
+  }
+  .highlight .nl {
+    color: #79c0ff;
+  }
+  .highlight .py {
+    color: #79c0ff;
+  }
+  .highlight .nv, .highlight .vc, .highlight .vg, .highlight .vi, .highlight .vm {
+    color: #79c0ff;
+  }
+  .highlight .o, .highlight .ow {
+    color: #79c0ff;
+  }
+  .highlight .gh {
+    color: #1f6feb;
+    font-weight: bold;
+  }
+  .highlight .gu {
+    color: #1f6feb;
+    font-weight: bold;
+  }
+  .highlight .s, .highlight .sa, .highlight .sc, .highlight .dl, .highlight .sd, .highlight .s2, .highlight .se, .highlight .sh, .highlight .sx, .highlight .s1, .highlight .ss {
+    color: #a5d6ff;
+  }
+  .highlight .nd {
+    color: #d2a8ff;
+  }
+  .highlight .nf, .highlight .fm {
+    color: #d2a8ff;
+  }
+  .highlight .err {
+    color: #f0f6fc;
+    background-color: #8e1519;
+  }
+  .highlight .c, .highlight .ch, .highlight .cd, .highlight .cm, .highlight .cp, .highlight .cpf, .highlight .c1, .highlight .cs {
+    color: #8b949e;
+  }
+  .highlight .gl {
+    color: #8b949e;
+  }
+  .highlight .gt {
+    color: #8b949e;
+  }
+  .highlight .ni {
+    color: #c9d1d9;
+  }
+  .highlight .si {
+    color: #c9d1d9;
+  }
+  .highlight .ge {
+    color: #c9d1d9;
+    font-style: italic;
+  }
+  .highlight .gs {
+    color: #c9d1d9;
+    font-weight: bold;
+  }
+}
+
+:root.dark {
+  @include dark-code-colors;
+}
+
+@media (prefers-color-scheme: dark) {
+  @include dark-code-colors;
 }
