feat(themes): temporarily remove theme toggle

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -248,12 +248,12 @@
           <span class="nav-item-label">Now</span>
         </a>
       </li>
-      <li class="theme-toggle">
-        <button aria-label="Dark/Light theme toggle" onClick="toggleTheme()">
-          <i class="twa twa-sun"></i>
-          <i class="twa twa-moon"></i>
-        </button>
-      </li>
+    <!-- <li class="theme-toggle">
+            <button aria-label="Dark/Light theme toggle" onClick="toggleTheme()">
+              <i class="twa twa-sun"></i>
+              <i class="twa twa-moon"></i>
+            </button>
+          </li> -->
     </ul>
   </nav>
 </header>
