feat(footer): add glider

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -83,6 +83,7 @@
           alt="A banner showing four icons: a pirate flag, a square ruler, a camera, and a pencil."
           title="Link free!"
       /></a>
+      {% include conway.svg %}
     </div>
   </div>
   {% assign lyric = site.data.lyrics | sample: 1 %}
