feat(nav): for hire link

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -204,6 +204,16 @@
                 </a>
               </li>-->
       <li>
+        <span class="badge">new!</span>
+        <a
+          class="nav-item"
+          href="https://hire.gosha.net"
+        >
+          <i class="twa twa-carps"></i>
+          <span class="nav-item-label">For Hire!</span>
+        </a>
+      </li>
+      <li>
         <a
           class="nav-item{% if active == 'projects' %} active{% endif %}"
           href="/projects"
