--- a/_sass/_emoji.scss
+++ b/_sass/_emoji.scss
@@ -99,3 +99,6 @@ licensed under MIT: https://ellekasai.mit-license.org/
 .twa-camera {
   background-image: url("/assets/images/icons/camera.svg");
 }
+.twa-carps {
+  background-image: url("/assets/images/icons/carps.svg");
+}
