feat(js): add mastodon-post web component

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,11 +27,14 @@
 {% endif %}
 <meta property="og:url" content="{{ site.url}}{{ page.url }}">
 <meta property="og:type" content="website">
-<meta property="og:title" content="{% if page.title %}{{ page.title }} → {{ site.title }}{% else %}{{ site.title }}{% endif %}">
+<meta property="og:title"
+  content="{% if page.title %}{{ page.title }} → {{ site.title }}{% else %}{{ site.title }}{% endif %}">
 {% if site.meta.default_social_image or page.featured_image %}
-  <meta property="og:image" content="{{ site.url}}{% if page.featured_image  %}{{ page.featured_image }}{% else %}{{ site.meta.default_social_image }}{% endif %}" />
+<meta property="og:image"
+  content="{{ site.url}}{% if page.featured_image  %}{{ page.featured_image }}{% else %}{{ site.meta.default_social_image }}{% endif %}" />
 {% endif %}
-<meta property="og:description" content="{% if page.description %}{{ page.description }}{% elsif page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}" />
+<meta property="og:description"
+  content="{% if page.description %}{{ page.description }}{% elsif page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}" />
 <meta property="og:site_name" content="{{ site.title }}">
 <meta property="og:locale" content="en_GB">
 <meta property="article:author" content="{{ site.author }}">
@@ -39,9 +42,12 @@
 <meta name="twitter:site" content="{{ site.meta.twitter }}">
 <meta name="twitter:creator" content="{{ site.meta.twitter }}">
 <meta name="twitter:url" content="{{ site.url}}{{ page.url }}">
-<meta name="twitter:title" content="{% if page.title %}{{ page.title }} → {{ site.title }}{% else %}{{ site.title }}{% endif %}">
-<meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% elsif page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}">
+<meta name="twitter:title"
+  content="{% if page.title %}{{ page.title }} → {{ site.title }}{% else %}{{ site.title }}{% endif %}">
+<meta name="twitter:description"
+  content="{% if page.description %}{{ page.description }}{% elsif page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}">
 {% if site.meta.default_social_image or page.featured_image %}
-  <meta name="twitter:image" content="{{ site.url}}{% if page.featured_image  %}{{ page.featured_image }}{% else %}{{ site.meta.default_social_image }}{% endif %}">
+<meta name="twitter:image"
+  content="{{ site.url}}{% if page.featured_image  %}{{ page.featured_image }}{% else %}{{ site.meta.default_social_image }}{% endif %}">
 {% endif %}
 <meta name="twitter:dnt" content="on">
