--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,1 +1,2 @@
 <script src="{{ site.baseurl }}/assets/javascript/bundle.js"></script>
+<script type="module" src="{{ site.baseurl }}/assets/javascript/mastodon-post.js"></script>
