feat(hire): add Hire Gosha! page

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -149,7 +149,7 @@ blockquote[data-source="fediverse"] {
   background-size: 2.5rem 2.5rem;
   background-repeat: no-repeat;
   background-position: 1rem 1rem;
-  background-color: var(--color-mastodon-embed-bg);
+  background-color: var(--color-strong-bg);
   padding: 1rem;
   padding-left: 4rem;
   border-radius: 1rem;
