--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -1,4 +1,5 @@
-input[type='text'], input[type='email'] {
+input[type="text"],
+input[type="email"] {
   padding: 0.5rem;
   border-radius: 0.2rem;
   border: 1px solid var(--color-neutral);
@@ -6,21 +7,33 @@ input[type='text'], input[type='email'] {
   font-size: 1rem;
   background-color: var(--color-neutral);
   color: var(--color-text);
-  transition: border-color .2s ease-out;
+  transition: border-color 0.2s ease-out;
   &:hover {
     border-color: var(--color-text);
   }
 }
 
-button, input[type='submit'], a.button {
-  padding: 1rem;
-  padding: 0.6rem;
+button,
+input[type="submit"],
+a.button {
+  padding: 0.6rem 1.5rem;
   font-size: 1rem;
-  background-color: var(--color-highlight);
+  background-color: var(--color-link);
   border: none;
   color: var(--color-bg);
-  border-radius: 0.3rem;
+  border-radius: 10rem;
   text-decoration: none;
+  margin-right: 0.5rem;
+  text-align: center;
+
+  &.secondary {
+    background-color: var(--color-emphasis);
+    color: var(--color-link);
+  }
+
+  &:hover {
+    color: var(--color-link-hover);
+  }
 }
 
 form {
@@ -32,7 +45,7 @@ form {
   }
   #mce-success-response {
     &::before {
-      content: '✅';
+      content: "✅";
       position: absolute;
       left: 0;
     }
@@ -41,7 +54,7 @@ form {
   }
   #mce-error-response {
     &::before {
-      content: '⚠️';
+      content: "⚠️";
       position: absolute;
       left: 0;
     }
