--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -1,4 +1,3 @@
-
 .project-metadata {
   font-family: var(--font-mono);
   font-size: var(--font-x-small);
@@ -174,7 +173,7 @@ section.gallery {
       // This is a hack to make cards square.
       // See this SO answer:
       // https://stackoverflow.com/a/29308459/12288625
-      content: '';
+      content: "";
       height: 100%;
       float: left;
       display: block;
@@ -185,7 +184,7 @@ section.gallery {
       bottom: 1rem;
       left: 1rem;
       margin-right: 1rem;
-      background-color: rgba(0,0,0,0.9);
+      background-color: rgba(0, 0, 0, 0.9);
       display: inline-block;
       width: auto;
       padding: 0.5rem 0.7rem;
@@ -194,7 +193,7 @@ section.gallery {
       h3 {
         margin-top: 0;
         color: white;
-        transition: color .2s ease-out;
+        transition: color 0.2s ease-out;
       }
       .meta {
         margin-bottom: 0;
@@ -222,12 +221,16 @@ section.gallery {
     top: 1rem;
     align-self: flex-start;
   }
+  .col.text h1 {
+    margin-top: 1rem;
+  }
   .col.text hr {
     width: 3rem;
     margin: 2rem auto;
     opacity: 0.5;
   }
-  .col.text p:first-child, .col.text h2:first-child {
+  .col.text p:first-child,
+  .col.text h2:first-child {
     margin-top: 0px;
   }
 }
@@ -237,8 +240,8 @@ section.gallery {
     grid-template-columns: 1fr;
     .col.sticky {
       position: unset;
-      top:auto;
-      align-self:normal;
+      top: auto;
+      align-self: normal;
     }
   }
 }
@@ -262,12 +265,14 @@ section.gallery {
 }
 
 @media (min-width: 481px) and (max-width: 1025px) {
-  .projects-grid, .gallery-grid {
+  .projects-grid,
+  .gallery-grid {
     grid-template-columns: 1fr 1fr;
   }
- }
+}
 @media (max-width: 480px) {
-  .projects-grid, .gallery-grid {
+  .projects-grid,
+  .gallery-grid {
     grid-template-columns: 1fr;
   }
 }
