feat(hire): no longer looking; add Maarten’s quote

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -204,13 +204,12 @@
            </a>
            </li>-->
       <li>
-        <span class="badge">new!</span>
         <a
           class="nav-item{% if active == 'hire' %} active{% endif %}"
           href="/hire"
         >
           <i class="twa twa-carps"></i>
-          <span class="nav-item-label">For Hire!</span>
+          <span class="nav-item-label">Work</span>
         </a>
       </li>
       <li>
