feat(nix): use Nix for deps, misc dep upgrades

--- a/assets/stylesheets/app.scss
+++ b/assets/stylesheets/app.scss
@@ -1,17 +1,17 @@
 ---
 ---
 
-@import "fonts";
-@import "main";
-@import "navigation";
-@import "footer";
-@import "layout";
-@import "gallery";
-@import "forms";
-@import "blog";
-@import "product";
-@import "emoji";
-@import "code";
-@import "video";
-@import "ukraine";
-@import "hire";
+@use "fonts";
+@use "main";
+@use "navigation";
+@use "footer";
+@use "layout";
+@use "gallery";
+@use "forms";
+@use "blog";
+@use "product";
+@use "emoji";
+@use "code";
+@use "video";
+@use "ukraine";
+@use "hire";
